docs: showcase and logo
Added showcase images and logo at top of webpage

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -33,4 +33,19 @@ nav li {
 a {
     color: #9A5C94;
 }
+/*Showcase alignments and padding*/
 
+div#Showcase {
+    display: flex;
+    flex-direction: row-reverse;
+}
+div.artwork {
+    flex-grow: 1;
+    margin: 5px;
+    padding: 5px;
+}
+
+div.artwork > img {
+    border: 5px solid #9A5C94;
+    border-radius: 10px;
+}
