Docs: Completed content for "Process" page
added all paragraphs and headers, as well as nav bar and ordered and unordered list elements.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -49,3 +49,15 @@ div.artwork > img {
     border: 5px solid #9A5C94;
     border-radius: 10px;
 }
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.slogan {
+    color: #b700a5;
+   text-align: center;
+   font-size: large;
+}
