Docs: Final aesthetic adjustments
Tried to get landing page images centered, but no dice.  adjusted size and margins of images in css (no marks for that aspect.).
Hopefully the final product goes well. Next step: Hosting on github online.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -42,8 +42,8 @@ div#Showcase {
 }
 div.artwork {
     flex-grow: 1;
-    margin: 5px;
-    padding: 5px;
+    margin: 1px;
+    padding: 1px;
     
 }
 
@@ -52,6 +52,7 @@ div.artwork > img {
     border-radius: 10px;
     
 }
+/*logo*/
 
 .logo {
     display: block;
