Docs: hosting file-pull bug fix
Fixing issues seen when site is hosted. Open and stray tags.

--- a/Pages/Illustrations/main.css
+++ b/Pages/Illustrations/main.css
@@ -18,7 +18,7 @@ a {
 /*header*/
 header {
     color:whitesmoke;
-    background-color: 9A5C94;
+    background-color: #9A5C94;
     font-size:large
 }
 
