--- a/Pages/About me/main.css
+++ b/Pages/About me/main.css
@@ -20,7 +20,7 @@ a {
 /*header*/
 header {
     color:whitesmoke;
-    background-color: 9A5C94;
+    background-color: #9A5C94;
     font-size:large
 }
 h2 {
