--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,10 +1,24 @@
 :root {
-    font-size: 80.5%;
-}
+body {
+    font-size: 100%;
+  }
+  
+  h1 {
+    font-size: 2.5em;
+  }
+  
+  h2 {
+    font-size: 1.875em;
+  }
+  
+  p {
+    font-size: 1em;
+  }
 
 /* Body */
 body {
     font-family: serif;
+}
 }
 
 /* header */
