--- a/CSS/main.css
+++ b/CSS/main.css
@@ -67,17 +67,6 @@ div.artwork > img {
     
 }
 
-div.gallery > img {
-flex: 1;    
-   
-}
-
-div#final-bond {
-    flex-direction: row;
-}
-div.spacer {
-    flex: 1;
-}
 
 /*logo*/
 
@@ -92,3 +81,7 @@ div.spacer {
    text-align: center;
    font-size: large;
 }
+
+ol > li::marker {
+    font-weight: bold;
+  }
