docs: JS & CSS - Button
Added fox motif img as button. CSS for transparency and hover. Alert for biting warning (haha)

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -227,6 +227,17 @@ ol > li::marker {
     color: #7edef6; 
 }
 
+/* button adjustements and stuff*/
+#btn-alert {
+    display: block;
+    margin: 0 auto;
+    max-width: 300px;
+    height: auto;
+    cursor: pointer;
+}
+#btn-alert:hover {
+opacity: 0.8;
+}
 
 
   /* general page elements */
